# JamLink

./: .gitattributes  .gitignore  README.md  app.json  package-lock.json  package.json
android/: build_log.txt  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: index.android.bundle
android/app/src/main/java/com/jamlink/app/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml
android/jamlink-native/: build.gradle.kts
android/jamlink-native/src/main/cpp/: CMakeLists.txt  jamlink-engine.cpp  jamlink-engine.h  jamlink-jni.cpp  ntp-math.cpp  ntp-math.h
android/jamlink-native/src/main/java/com/jamlink/native/: JamLinkBridgeModule.kt  JamLinkNativePackage.kt
android/jamlink-native/src/main/java/com/jamlink/nativelib/: JamLinkBridgeModule.kt  JamLinkNativePackage.kt
android/jamlink-native/src/main/java/com/jamlink/nativelib/network/: JamLinkP2pManager.kt  NetworkStateManager.kt  TcpCommandClient.kt  TcpCommandServer.kt
app/: App.tsx
app/hooks/: useJamLinkNetwork.ts
app/screens/: NetworkTestScreen.tsx  PingTestScreen.tsx  TimeSyncScreen.tsx
app/specs/: NativeJamLinkBridge.ts
docs/branding/: generate-icons.js
ios/: Podfile
ios/JamLink/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/JamLink.xcodeproj/: project.pbxproj
ios/JamLink.xcodeproj/xcshareddata/xcschemes/: JamLink.xcscheme
ios/JamLink/Images.xcassets/AppIcon.appiconset/: Contents.json
(+5 files in other folders)
